--- a/P4M Notebook1.ipynb
+++ b/P4M Notebook1.ipynb
@@ -3936,7 +3936,7 @@
         "print(divmod(10,3.3))\n",
         "print(divmod(10,-3.3))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4153,10 +4153,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "PoGqUlqoU5yY",
-        "outputId": "a99e2cf0-6d73-4cdb-82b1-0052394ecf97",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a99e2cf0-6d73-4cdb-82b1-0052394ecf97"
       },
       "source": [
         "from math import sqrt\n",
@@ -4171,7 +4171,7 @@
         "  print(\"error \", i+1,  \" = \", error)\n",
         "\n"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4240,15 +4240,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "cH0ApCftU5yY",
-        "outputId": "35143a21-7e44-4fa9-c1ad-7513cb0fa78b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a5c220cd-56c0-4fd8-9aa8-a8fb147c3d67"
       },
       "source": [
-        "estimate = 0\n",
         "coefficient = 1\n",
         "term = 0\n",
+        "estimate = 0\n",
         "new_estimate = 1\n",
         "while estimate != new_estimate:\n",
         "  term = term + 1\n",
@@ -4258,7 +4258,7 @@
         "print(estimate)\n",
         "print(term)"
       ],
-      "execution_count": 62,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -4294,8 +4294,8 @@
         "Using the formula for a geometric series, we find that \n",
         "$$ \\frac{1}{1+ x^2} = \\sum_{n = 0}^\\infty (-1)^{n}x^{2n} = 1 - x^2 + x^4 - \\cdots $$\n",
         "Integrating term by term, we have \n",
-        "$$\\operatorname{atan}(x) = x - \\frac{x^3}{3} + \\frac{x^5}{5} - \\cdots$$\n",
-        "and setting $ x = 1$, we obtain the following series representation:\n",
+        "$$\\operatorname{atan}(x) = C + x - \\frac{x^3}{3} + \\frac{x^5}{5} - \\cdots$$\n",
+        "for some constant C. Setting $x = 0$, we find that $C = 0$ and setting $ x = 1$, we obtain the following series representation:\n",
         "$$ \\frac{\\pi}{4} = \\sum_{n = 0}^\\infty \\frac{(-1)^n}{2n+1} = 1 - \\frac{1}{3} + \\frac{1}{5} - \\cdots$$"
       ]
     },
@@ -4303,10 +4303,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "wYlwMQxBU5yY",
-        "outputId": "e8d9ae93-08d2-46b7-b072-f4990cfafed1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e8d9ae93-08d2-46b7-b072-f4990cfafed1"
       },
       "source": [
         "terms = 100000\n",
@@ -4315,7 +4315,7 @@
         "  estimate = estimate + (-1)**i/(2*i+1)\n",
         "print(4*estimate)"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4345,13 +4345,12 @@
       "cell_type": "code",
       "metadata": {
         "id": "71EwcYnMU5yY",
-        "outputId": "b383f088-353e-4be5-d4e0-2b0ac4a3ebc3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4392f8df-d547-4139-f6a3-13e6ab04a914"
       },
       "source": [
-        "from math import pi\n",
         "estimate = 0\n",
         "new_estimate = 4/5 - 1/239 \n",
         "term = 1\n",
@@ -4362,7 +4361,7 @@
         "print(term)\n",
         "print(4*estimate)"
       ],
-      "execution_count": 83,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -4404,13 +4403,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3e165062-c786-4a26-de91-0c32309ce1aa"
+        "outputId": "1d1aea27-93c4-440b-e804-a40cf5ed0b23"
       },
       "source": [
         "from mpmath import *\n",
         "print(mp)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -4440,13 +4439,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a7d8f035-43c8-446e-f27e-1894584d8bca"
+        "outputId": "63a26f6c-53d8-40cd-d922-ce02a5e14786"
       },
       "source": [
         "mp.dps = 50 # Let's try 50 digits precision to start.\n",
         "print(mp)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -4477,12 +4476,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6f2a6c14-7389-44f0-cae7-5453806c3926"
+        "outputId": "4bbc8ffe-3ef5-44d2-9d31-ae5a964dc1f8"
       },
       "source": [
         "sqrt(2)  # mpf(...) stands for an mp-float.  "
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4494,7 +4493,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 80
+          "execution_count": 4
         }
       ]
     },
@@ -4505,12 +4504,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "410081f0-4af1-4124-988d-8b5c5aba7226"
+        "outputId": "db697077-32ad-4040-9521-a3f805823a57"
       },
       "source": [
         "type(sqrt(2)) # mpmath stores numbers in its own types!"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4522,7 +4521,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 81
+          "execution_count": 5
         }
       ]
     },
@@ -4533,12 +4532,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2ac85129-fb02-4648-e738-757ab7c79ea7"
+        "outputId": "b3741b56-745f-4ea2-bf3e-78b98ea13d47"
       },
       "source": [
         "4*mp.atan(1) # mpmath has the arctan built in.  This should be pretty close to pi!"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4550,7 +4549,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 82
+          "execution_count": 6
         }
       ]
     },
@@ -4566,13 +4565,104 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ulLOs22VU5yZ"
+        "id": "ulLOs22VU5yZ",
+        "outputId": "65589695-4db1-44dc-fc09-a6b3feaa84bf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "#  Explore and experiment."
+        "mp.dps = 100\n",
+        "inscribed_p = 4*sqrt(2)\n",
+        "circumscribed_p = 8\n",
+        "term = 2\n",
+        "pi_estimate = (inscribed_p + circumscribed_p)/4 # The average of the inscribed and circumscribed perimeters should be close to the perimeter of the circle, 2pi\n",
+        "actual_pi = 4*mp.atan(1)\n",
+        "while abs(pi_estimate - actual_pi) > 1E-100:\n",
+        "  term += 1\n",
+        "  circumscribed_p = 2*inscribed_p*circumscribed_p/(inscribed_p + circumscribed_p)\n",
+        "  inscribed_p = sqrt(inscribed_p*circumscribed_p)\n",
+        "  pi_estimate = (inscribed_p + circumscribed_p)/4\n",
+        "print(term)\n",
+        "\n",
+        "estimate = mpf(0)\n",
+        "term = 0\n",
+        "while abs(4*estimate - actual_pi) > 1E-100 and term < 30:\n",
+        "  estimate = estimate + 4 * (-1)**term * (1/(5**(2*term + 1)))/(2 * term + 1) - (-1)**term * (1/(239**(2*term + 1)))/(2 * term + 1)\n",
+        "  print(term)\n",
+        "  print(abs(4*estimate - actual_pi))\n",
+        "  term = term +1\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "167\n",
+            "0\n",
+            "0.04167094473656677324615875023260552790842070568165687433755540769218359371379100137196517465788293202\n",
+            "1\n",
+            "0.0009956242637327436605024972270322339723145348566857487025246628034218750362089986280348253421170679793\n",
+            "2\n",
+            "0.00002837573524136725230141427513385062968398131637804810552684375600083028629504495106673715788293202072\n",
+            "3\n",
+            "0.0000008814076157627735428142910713247501683706887030483683645351340530356602460779155531068317277399763495\n",
+            "4\n",
+            "0.00000002881460645944857318510524462071492011702237818486701957317369087974773001015320573962930939751108807\n",
+            "5\n",
+            "0.0000000009744844496423341009715461485925670367069178606457178638889054530798729374008701883445704067419664675\n",
+            "6\n",
+            "0.00000000003376170420381971217719719547275686347352523612069662684932042201108035120286608861834827854703883804\n",
+            "7\n",
+            "0.000000000001190829129513622579667009553121381122515732859361848672756866751810724652687393558211910412900845389\n",
+            "8\n",
+            "0.00000000000004278969401578930893290527744180579919602559994890190072937982715263243519518792586743634222264639787\n",
+            "9\n",
+            "0.0000000000000013608744052633235460474505780019108635182237683577513095499137208360386806633530081050045857394686\n",
+            "10\n",
+            "0.0000000000000002369556899747715912643522677343774125637480655744893314801798967510763054150822044864183241741817492\n",
+            "11\n",
+            "0.0000000000000001786001560617281147764260832414528982269732059442776126638470311473545291228007823665248279156595056\n",
+            "12\n",
+            "0.0000000000000001807476397097281148590931865597322338692668939486789715771176339887677461362135835358492500962998471\n",
+            "13\n",
+            "0.0000000000000001806681032783207074455033147676870151946930893728606348942853076411803860560186079745869412483602637\n",
+            "14\n",
+            "0.0000000000000001806710653247317419281585655549422248865190831572033777239356181831433660029135518020350406447327025\n",
+            "15\n",
+            "0.0000000000000001806709544868660387023315013592613567556267357669366595412913821644113210354253087782292586251401588\n",
+            "16\n",
+            "0.0000000000000001806709586516828105811196355038819943811381862647821357932831282659995303514574133113692542208508226\n",
+            "17\n",
+            "0.0000000000000001806709584946097208988339140802483403361660681904252456021664795716536013406633634710736713083363825\n",
+            "18\n",
+            "0.0000000000000001806709585005530269949204012905662797157803743695365709466905469720494793370716589433014990293871869\n",
+            "19\n",
+            "0.0000000000000001806709585003274861481971192586809223492756622875405250125061312950978218134236167599492244894776439\n",
+            "20\n",
+            "0.0000000000000001806709585003360677023651270630615637805096638247897174008887824663236176623919556955342931375225868\n",
+            "21\n",
+            "0.0000000000000001806709585003357404058805797886104811782357901626546124335267707683452683895304295296297656404897418\n",
+            "22\n",
+            "0.0000000000000001806709585003357529158795447066558215431485114795322084428333938264217432860505213609300513586813439\n",
+            "23\n",
+            "0.0000000000000001806709585003357524367732013693690307656468046286189249322423899015638249212515534214455377517121511\n",
+            "24\n",
+            "0.000000000000000180670958500335752455155240664758807879266771245781138732402168066173828202413449165605247971215056\n",
+            "25\n",
+            "0.0000000000000001806709585003357524544487936643869654050254781440727910639541471412446988704157479326998119548546244\n",
+            "26\n",
+            "0.0000000000000001806709585003357524544759852093069382123931557264503889294093095858061884224581032355677145246705601\n",
+            "27\n",
+            "0.0000000000000001806709585003357524544749370988482047151449654911467311327709139392105769913219984445739222761472946\n",
+            "28\n",
+            "0.000000000000000180670958500335752454474977552234331271178193912158813306635514777216317465623137688214358344034553\n",
+            "29\n",
+            "0.0000000000000001806709585003357524544749759889509351940976649133552649494709707869072146911063609207416369183476052\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
