--- a/P4M_Notebook2.ipynb
+++ b/P4M_Notebook2.ipynb
@@ -630,11 +630,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "X7r6-JbnFzyj",
-        "outputId": "5631b19c-a8c6-4fd2-e0ee-762759b63542",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "X7r6-JbnFzyj",
+        "outputId": "5631b19c-a8c6-4fd2-e0ee-762759b63542"
       },
       "source": [
         "def factorial(n):\n",
@@ -658,13 +658,49 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dcAUtZfwGIY3"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "dcAUtZfwGIY3",
+        "outputId": "ea79795f-860f-47c7-9879-d910397bbed2"
       },
       "source": [
         "\"Python\".replace(\"yth\",\"arag\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Paragon'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 27
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'Paragon'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "markdown",
