--- a/P4M Notebook1.ipynb
+++ b/P4M Notebook1.ipynb
@@ -3922,7 +3922,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c44c1ffc-728c-48ea-e6cf-eca111438968"
+        "outputId": "52f50daa-10ce-4145-aad7-584ff2da107c"
       },
       "source": [
         "print(divmod(-75,4))\n",
@@ -3936,7 +3936,7 @@
         "print(divmod(10,3.3))\n",
         "print(divmod(10,-3.3))"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -4156,13 +4156,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a99e2cf0-6d73-4cdb-82b1-0052394ecf97"
+        "outputId": "da0ca6d5-508e-4a00-bb71-199b3bb306f6"
       },
       "source": [
         "from math import sqrt\n",
         "\n",
-        "N = 10**20\n",
-        "guess = 10**10 + 10**5\n",
+        "N = 2\n",
+        "guess = 1\n",
         "iterations = 10\n",
         "for i in range(iterations):\n",
         "  guess = (guess + N/guess)/2\n",
@@ -4171,31 +4171,31 @@
         "  print(\"error \", i+1,  \" = \", error)\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "guess  1  =  10000000000.499996\n",
-            "error  1  =  0.4999961853027344\n",
-            "guess  2  =  10000000000.0\n",
-            "error  2  =  0.0\n",
-            "guess  3  =  10000000000.0\n",
-            "error  3  =  0.0\n",
-            "guess  4  =  10000000000.0\n",
-            "error  4  =  0.0\n",
-            "guess  5  =  10000000000.0\n",
-            "error  5  =  0.0\n",
-            "guess  6  =  10000000000.0\n",
-            "error  6  =  0.0\n",
-            "guess  7  =  10000000000.0\n",
-            "error  7  =  0.0\n",
-            "guess  8  =  10000000000.0\n",
-            "error  8  =  0.0\n",
-            "guess  9  =  10000000000.0\n",
-            "error  9  =  0.0\n",
-            "guess  10  =  10000000000.0\n",
-            "error  10  =  0.0\n"
+            "guess  1  =  10000.5\n",
+            "error  1  =  9859.07864376269\n",
+            "guess  2  =  5001.2499500025\n",
+            "error  2  =  4859.82859376519\n",
+            "guess  3  =  2502.6244751462077\n",
+            "error  3  =  2361.2031189088984\n",
+            "guess  4  =  1255.3080428164837\n",
+            "error  4  =  1113.8866865791742\n",
+            "guess  5  =  635.620193581857\n",
+            "error  5  =  494.19883734454754\n",
+            "guess  6  =  333.54276246293597\n",
+            "error  6  =  192.12140622562646\n",
+            "guess  7  =  196.75254444471932\n",
+            "error  7  =  55.33118820740981\n",
+            "guess  8  =  149.20153615082518\n",
+            "error  8  =  7.780179913515667\n",
+            "guess  9  =  141.62420669397466\n",
+            "error  9  =  0.20285045666514634\n",
+            "guess  10  =  141.42150151017185\n",
+            "error  10  =  0.00014527286234056191\n"
           ],
           "name": "stdout"
         }
@@ -4219,8 +4219,10 @@
         "We may can analytically describe how the error of our guess changes with each iteration of our loop. Suppose that we are trying to approximate $\\sqrt{N}$, and our guess is $g = \\sqrt{N} + \\varepsilon$. After performing one loop of the above process, our new guess is \n",
         "$$\\frac{1}{2} \\left(\\sqrt{N} + \\varepsilon + \\frac{N}{\\sqrt{N} + \\varepsilon} \\right)$$\n",
         "Performing some algebraic manipulation, we can find that this quantity is equal to \n",
-        "$$\\sqrt{N} + \\frac{\\varepsilon^2 \\sqrt{N} - \\varepsilon^3}{2(N - \\varepsilon^2)}$$\n",
-        "which shows that when $\\varepsilon$ is very small compared to $N$, "
+        "$$\\sqrt{N} + \\frac{\\varepsilon^2}{2(\\sqrt{N} + \\varepsilon)}.$$\n",
+        "From this, we can analyze how this procedure converges. We note that as long as our initial guess is positive, $\\sqrt{N} + \\varepsilon$ will never be negative, so at each step except for perhaps our initial guess, our error term $\\varepsilon = g - \\sqrt{N}$ will be positive. Now, provided that $\\varepsilon$ is positive, we have \n",
+        "$$\\frac{\\varepsilon^2}{2(\\sqrt{N} + \\varepsilon)} \\leq \\frac{\\varepsilon^2}{2\\varepsilon} = \\frac{\\varepsilon}{2}$$\n",
+        "so after the first step, the error will always be at least halved. We note that if our starting guess is chosen poorly, our error can increase at the first step of the procedure; e.g., if $N = 1$ and $g = .01$, then our error is $.99$, but after performing one iteration, our next guess is $g = 50.005$, so we have moved further away.\n"
       ]
     },
     {
@@ -4229,6 +4231,7 @@
         "id": "fOUbCcfxU5yY"
       },
       "source": [
+        "\n",
         "## Exploration 2:  Approximating e and pi.\n",
         "\n",
         "Now we approximate two of the most important constants in mathematics:  e and pi.  There are multiple approaches, but e is pretty easy with the series expansion of e^x.  First, approximate e by evaluating the Taylor series expansion of e^x at x=1.  I.e., remember from calculus that\n",
@@ -4258,7 +4261,7 @@
         "print(estimate)\n",
         "print(term)"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4361,7 +4364,7 @@
         "print(term)\n",
         "print(4*estimate)"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4409,7 +4412,7 @@
         "from mpmath import *\n",
         "print(mp)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4445,7 +4448,7 @@
         "mp.dps = 50 # Let's try 50 digits precision to start.\n",
         "print(mp)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4481,7 +4484,7 @@
       "source": [
         "sqrt(2)  # mpf(...) stands for an mp-float.  "
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4509,7 +4512,7 @@
       "source": [
         "type(sqrt(2)) # mpmath stores numbers in its own types!"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4537,7 +4540,7 @@
       "source": [
         "4*mp.atan(1) # mpmath has the arctan built in.  This should be pretty close to pi!"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4566,10 +4569,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ulLOs22VU5yZ",
-        "outputId": "65589695-4db1-44dc-fc09-a6b3feaa84bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "65589695-4db1-44dc-fc09-a6b3feaa84bf"
       },
       "source": [
         "mp.dps = 100\n",
@@ -4593,7 +4596,7 @@
         "  print(abs(4*estimate - actual_pi))\n",
         "  term = term +1\n"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
